Fix HTML structure and video source path

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h1 id="text">🪔  Happy Diwali  🪔</h1>
     <div class="video-container">
         <video id="diwali-video" loop>
-            <source src="vid/VN20251017_204301 (1).mp4" type="video/mp4">
+            <source src="VN20251017_204301 (1).mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
     </div>
@@ -28,4 +28,5 @@
     </footer>
     <script src="script.js"></script>
 </body>
+
 </html>
