--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <button class="go-btn">GO</button>
+    <button class="go-btn">click here</button>
     <h1 id="text">🪔  Happy Diwali  🪔</h1>
     <div class="video-container">
         <video id="diwali-video" loop>
